# orcastrate

./: .gitignore  Cargo.toml  README.md
orcastrate/: Cargo.toml
orcastrate-macro/: Cargo.toml
orcastrate-macro/src/: lib.rs
orcastrate/src/: error.rs  lib.rs  main.rs  messages.rs  notify.rs  redis.rs  seer.rs  swarm.rs  task.rs  types.rs  worker.rs
orcastrate/src/processors/: redis.rs
orcastrate/src/processors/redis/: gatekeeper.rs  scheduler.rs  state_scribe.rs  statekeeper.rs  task_runner.rs  time_keeper.rs  timekeeper.rs
orcastrate/src/redis/: gatekeeper.rs  statekeeper.rs  timekeeper.rs
src/: lib.rs  main.rs  matriarch.rs  messages.rs  reproduce.rs  task.rs  types.rs  worker.rs
src/capnp/: task.capnp  task_capnp.rs
src/processors/: redis.rs
