[package]
name = "orcastra"
version = "0.1.0"
edition = "2024"



[dependencies]
async-trait = "0.1.88"
capnp = "0.21.0"
capnp-futures = "0.21.0"
capnp-rpc = "0.21.0"
capnpc = "0.21.0"
futures-util = "0.3.31"
kameo =  { git = "https://github.com/tqwewe/kameo.git"}
redis = { version = "0.29.5", features = ["streams", "tokio-comp","aio"] }
serde = "1.0.219"
serde_json = "1.0.140"
time = "0.3.41"
tokio = { version = "1.44.2", features = ["full"] }
uuid = {version = "1.16.0", features = ["v4","serde"]}

[build-dependencies]
capnpc = "0.14"
