[package]
name = "orcastrate-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] } # Keep serde if needed for arg struct
serde_json = "1.0" # Keep serde_json if needed
inventory = "0.3.2" # Add inventory

