[package]
name = "orcastrate"
version = "0.1.0"
edition = "2024"



[dependencies]
async-trait = "0.1.88"
futures-util = "0.3.31"
kameo =  { git = "https://github.com/tqwewe/kameo.git" }
redis = { version = "0.29.5", features = ["streams", "tokio-comp","aio"] }
serde = "1.0.219"
serde_json = "1.0.140"
time = "0.3.41"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt", "time"]}
tokio = { version = "1.44.2", features = ["full"] }
uuid = {version = "1.16.0", features = ["v4","serde"]}
chrono = "0.4.41"
croner = "2.1.0"
orcastrate-macro = {version="*", path = "../orcastrate-macro"}
inventory = "0.3.20"
thiserror = "2.0.12"

[build-dependencies]
capnpc = "0.14"
